# qtbot

./: .env.example  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  launcher.py  pyproject.toml  qtbot.py  requirements.txt  riot.txt  test.json  xkcd.json
cogs/: _test.py  admin.py  ask.py  books.py  calc.py  comics.py  covid.py  crypto.py  dalle.py  ddg.py  dictionary.py  diffusion.py  error.py  eval.py  facts.py  games.py  generic.py  gif.py  gm.py  google.py  ip.py  isup.py  lastfm.py  league.py  meme.py  mod.py  movies.py  music.py  new_weather.py  news.py  osrs.py  owner.py  poll.py  pyval.py  quote.py  regex.py  ris.py  rng.py  stonks.py  tag.py  (+12 more)
data/: champ_data.json  champ_info.json  cmc_mappings.json  dalle_resp_test.json  good_morning.json  hwords.json  item-data.json  xkcd_blob.json  xkcd_comics.json
prisma/: schema.prisma
utils/: aiohttp_wrap.py  custom_context.py  dict_manip.py  giphy_wrapper.py  google_funcs.py  images.py  league.py  paginate.py  text.py  user_funcs.py  yt_funcs.py
