[tool.poetry]
name = "qtbot"
version = "0.1.0"
description = ""
authors = ["naught0"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.24.0"
aiohttp = "^3.9.3"
asyncpg = "0.27"
asyncurban = "0.3.3"
beautifulsoup4 = "4.9.1"
lxml = "4.9.1"
nltk = "3.6.6"
riotwatcher = "3.1.0"
tmdbsimple = "2.6.6"
wolframalpha = "4.0.0"
python-dateutil = "^2.8.1"
"discord.py" = "^2.3.2"
CairoSVG = "^2.5.2"
backoff = "^2.1.2"
redis = "^5.0.1"
prisma = "^0.12.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
